#176 Working on removing lucene filters.